--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -57,7 +57,8 @@
     "from uuid import uuid4\n",
     "from Naked.toolshed.shell import muterun_js\n",
     "import json\n",
-    "import math"
+    "import math\n",
+    "from IPython.core.display import display, HTML"
    ]
   },
   {
@@ -195,7 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'natural_test' # file in datasets dir (without extension)\n",
+    "# Use this cell to generate and preview the HIT description\n",
+    "\n",
+    "dataset = 'graphic_designers_selection' # file in datasets dir (without extension)\n",
     "\n",
     "# it does some processing of the JSON because different formats are allowed\n",
     "# this keeps that logic in one place\n",
@@ -208,13 +211,17 @@
     "    print(response.stderr)\n",
     "\n",
     "desc = \"This task must be completed on a <strong>mobile device</strong>. \"\n",
-    "desc += \"In this task, you will be presented with a photo gallery of %s images. \" % dsetinfo['numPhotos']\n",
-    "desc += \"Please inspect each image carefully, using the pinch zoom gesture on your mobile device to study image details. \"\n",
-    "desc += \"Please spend at %s-%s seconds per image looking around and zooming. \" % (photo_sec_range)\n",
+    "desc += \"In this task, you will be presented with a photo gallery of <strong>%s %s</strong>. \" % (dsetinfo['numPhotos'], dsetinfo['category'])\n",
+    "desc += \"Please inspect each image carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. \"\n",
+    "desc += \"Please spend at <strong>%s-%s seconds</strong> per image looking around and zooming. \" % (photo_sec_range)\n",
     "desc += \"Please swipe right after viewing each image to move to the next one. \"\n",
     "desc += \"You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. \"\n",
-    "desc += \"The entire task should take you about %s-%s minutes and must be completed in one sitting. \" % (task_min_range)\n",
-    "desc"
+    "desc += \"The entire task should take you about <strong>%s-%s minutes</strong> and must be completed in one sitting. \" % (task_min_range)\n",
+    "if dsetinfo['extraQuestions']:\n",
+    "    desc += \"At the end of the task you will be asked: <strong><ul>\"\n",
+    "    desc += ''.join([\"<li>\" + q + \"</li>\" for q in dsetinfo['extraQuestions']])\n",
+    "    desc += \"</strong></ul>\"\n",
+    "display(HTML(desc))"
    ]
   },
   {
@@ -225,14 +232,14 @@
    "source": [
     "# Use this cell to configure your HIT\n",
     "hit_config = {\n",
-    "    \"title\": \"Zoom Maps\",\n",
+    "    \"title\": \"Zoom Maps: \" + dsetinfo['category'],\n",
     "    \"description\": desc,\n",
     "    \"keywords\": [\"zoom\", \"pinch\", \"gesture\", \"mobile\", \"phone\", \"tablet\", \"image\", \"photo\", \"picture\"],\n",
     "    \"numAssignments\": 100, # per HIT\n",
     "    \"rewardAmount\": \"0.00\",\n",
     "    \"duration\": task_min_range[1] * 60 * 4, # in seconds\n",
     "    \"lifetime\": 24 * 60 * 60, # in seconds\n",
-    "    \"taskUrl\": \"https://enigmatic-everglades-39931.herokuapp.com/natural_test\",\n",
+    "    \"taskUrl\": \"https://enigmatic-everglades-39931.herokuapp.com/\" + dataset,\n",
     "    # one HIT gets created per dictionary\n",
     "    # you can add items to the dict to override the values above\n",
     "    # alternatively, provide a number to create that many HITs with the default settings\n",
