Update Mturk Text

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -75,7 +75,7 @@
     "ALLOW_HIT_CREATION = True\n",
     "ALLOW_ASSIGNMENT_ADDITION = False\n",
     "ALLOW_CREATE_QUAL = False\n",
-    "ALLOW_UPDATE_EXPIRATION = True"
+    "ALLOW_UPDATE_EXPIRATION = False"
    ]
   },
   {
@@ -210,18 +210,26 @@
     "else:\n",
     "    print(response.stderr)\n",
     "\n",
-    "desc = \"This task must be completed on a <strong>mobile device</strong>. \"\n",
-    "desc += \"In this task, you will be presented with a photo gallery of <strong>%s %s</strong>. \" % (dsetinfo['numPhotos'], dsetinfo['category'])\n",
-    "desc += \"Please inspect each image carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. \"\n",
-    "desc += \"Please spend at <strong>%s-%s seconds</strong> per image looking around and zooming. \" % (photo_sec_range)\n",
-    "desc += \"Please swipe right after viewing each image to move to the next one. \"\n",
-    "desc += \"You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. \"\n",
-    "desc += \"The entire task should take you about <strong>%s-%s minutes</strong> and must be completed in one sitting. \" % (task_min_range)\n",
+    "\n",
+    "inst = \"<p>\"\n",
+    "inst += \"This task must be completed on a <strong>mobile device</strong>. \"\n",
+    "inst += \"In this task, you will be presented with a photo gallery of <strong>%s %s</strong>. \" % (dsetinfo['numPhotos'], dsetinfo['category'])\n",
+    "inst += \"Please inspect each image carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. \"\n",
+    "inst += \"Please spend at <strong>%s-%s seconds</strong> per image looking around and zooming. \" % (photo_sec_range)\n",
+    "inst += \"Please swipe right after viewing each image to move to the next one. \"\n",
+    "inst += \"You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. \"\n",
+    "inst += \"The entire task should take you about <strong>%s-%s minutes</strong> and must be completed in one sitting. \" % (task_min_range)\n",
+    "\n",
+    "ques_list = \"\"\n",
     "if dsetinfo['extraQuestions']:\n",
-    "    desc += \"At the end of the task you will be asked: <strong><ul>\"\n",
-    "    desc += ''.join([\"<li>\" + q + \"</li>\" for q in dsetinfo['extraQuestions']])\n",
-    "    desc += \"</strong></ul>\"\n",
-    "display(HTML(desc))"
+    "    inst += \"At the end of the task you will be asked:\"\n",
+    "    ques_list += \"<ul>\"\n",
+    "    ques_list += ''.join([\"<li><strong>\" + q + \"</strong></li>\" for q in dsetinfo['extraQuestions']])\n",
+    "    ques_list += \"</ul>\"\n",
+    "\n",
+    "inst += \"</p>\"\n",
+    "inst += ques_list\n",
+    "display(HTML(inst))"
    ]
   },
   {
@@ -233,17 +241,18 @@
     "# Use this cell to configure your HIT\n",
     "hit_config = {\n",
     "    \"title\": \"Zoom Maps: \" + dsetinfo['category'],\n",
-    "    \"description\": desc,\n",
+    "    \"description\": \"Pinch and Zoom to look at \" + dsetinfo['category'],\n",
+    "    \"instructions\": desc\n",
     "    \"keywords\": [\"zoom\", \"pinch\", \"gesture\", \"mobile\", \"phone\", \"tablet\", \"image\", \"photo\", \"picture\"],\n",
     "    \"numAssignments\": 100, # per HIT\n",
     "    \"rewardAmount\": \"0.00\",\n",
     "    \"duration\": task_min_range[1] * 60 * 4, # in seconds\n",
-    "    \"lifetime\": 24 * 60 * 60, # in seconds\n",
+    "    \"lifetime\": 2 * 24 * 60 * 60, # in seconds\n",
     "    \"taskUrl\": \"https://enigmatic-everglades-39931.herokuapp.com/\" + dataset,\n",
     "    # one HIT gets created per dictionary\n",
     "    # you can add items to the dict to override the values above\n",
     "    # alternatively, provide a number to create that many HITs with the default settings\n",
-    "    \"HITs\": 1, # IF YOU CHANGE THIS YOU NEED TO INTEGRATE WITH THE CODE ABOVE\n",
+    "    \"HITs\": 5, # IF YOU CHANGE THIS TO A DICT YOU NEED TO INTEGRATE WITH THE CODE ABOVE\n",
     "}\n",
     "\n",
     "external_submit = True # DO NOT CHANGE -- this means link to app, don't embed in AMT\n",
