Update text to not always say image.

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "# Safety flags that prevent you from accidentally messing up your HITs. \n",
     "# Set to False except when you are performing these specific tasks.\n",
-    "ALLOW_HIT_CREATION = True\n",
+    "ALLOW_HIT_CREATION = False\n",
     "ALLOW_ASSIGNMENT_ADDITION = False\n",
     "ALLOW_CREATE_QUAL = False\n",
     "ALLOW_UPDATE_EXPIRATION = False"
@@ -168,7 +168,7 @@
     "def create_hit_external(task):\n",
     "    with open('questionform_template.xml', 'r') as myfile:\n",
     "        template=myfile.read() \n",
-    "    question_xml = template % (task[\"title\"], task[\"description\"], task['taskUrl'])\n",
+    "    question_xml = template % (task[\"title\"], task[\"instructions\"], task['taskUrl'])\n",
     "    create_hit(task, question_xml)"
    ]
   },
@@ -200,6 +200,9 @@
     "\n",
     "dataset = 'graphic_designers_selection' # file in datasets dir (without extension)\n",
     "\n",
+    "big_name = 'Graphic Designer Résumés'\n",
+    "small_name = 'résumé'\n",
+    "\n",
     "# it does some processing of the JSON because different formats are allowed\n",
     "# this keeps that logic in one place\n",
     "response = muterun_js('../utils/read-dataset.js', dataset)\n",
@@ -210,13 +213,12 @@
     "else:\n",
     "    print(response.stderr)\n",
     "\n",
-    "\n",
     "inst = \"<p>\"\n",
     "inst += \"This task must be completed on a <strong>mobile device</strong>. \"\n",
-    "inst += \"In this task, you will be presented with a photo gallery of <strong>%s %s</strong>. \" % (dsetinfo['numPhotos'], dsetinfo['category'])\n",
-    "inst += \"Please inspect each image carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. \"\n",
-    "inst += \"Please spend at <strong>%s-%s seconds</strong> per image looking around and zooming. \" % (photo_sec_range)\n",
-    "inst += \"Please swipe right after viewing each image to move to the next one. \"\n",
+    "inst += \"In this task, you will be presented with a photo gallery of <strong>%s %s</strong>. \" % (dsetinfo['numPhotos'], big_name)\n",
+    "inst += \"Please inspect each %s carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. \" % small_name\n",
+    "inst += \"Please spend at least <strong>%s-%s seconds</strong> per %s looking around and zooming. \" % (photo_sec_range + (small_name,))\n",
+    "inst += \"Please swipe right after viewing each %s to move to the next one. \" % small_name\n",
     "inst += \"You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. \"\n",
     "inst += \"The entire task should take you about <strong>%s-%s minutes</strong> and must be completed in one sitting. \" % (task_min_range)\n",
     "\n",
@@ -240,9 +242,9 @@
    "source": [
     "# Use this cell to configure your HIT\n",
     "hit_config = {\n",
-    "    \"title\": \"Zoom Maps: \" + dsetinfo['category'],\n",
-    "    \"description\": \"Pinch and Zoom to look at \" + dsetinfo['category'],\n",
-    "    \"instructions\": desc\n",
+    "    \"title\": \"Zoom Maps: \" + big_name,\n",
+    "    \"description\": \"Pinch and Zoom to look at \" + big_name,\n",
+    "    \"instructions\": inst,\n",
     "    \"keywords\": [\"zoom\", \"pinch\", \"gesture\", \"mobile\", \"phone\", \"tablet\", \"image\", \"photo\", \"picture\"],\n",
     "    \"numAssignments\": 100, # per HIT\n",
     "    \"rewardAmount\": \"0.00\",\n",
