Add question to instructions.

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -250,14 +250,14 @@
     "    \"rewardAmount\": \"0.00\",\n",
     "    \"duration\": task_min_range[1] * 60 * 4, # in seconds\n",
     "    \"lifetime\": 1 * 60 * 60, # in seconds\n",
-    "    \"taskUrl\": \"https://enigmatic-everglades-39931.herokuapp.com/\" + dataset,\n",
+    "    \"taskUrl\": \"https://enigmatic-everglades-39931.herokuapp.com?dataset=\" + dataset,\n",
     "    # one HIT gets created per dictionary\n",
     "    # you can add items to the dict to override the values above\n",
     "    # alternatively, provide a number to create that many HITs with the default settings\n",
-    "    \"HITs\": 1, # IF YOU CHANGE THIS TO A DICT YOU NEED TO INTEGRATE WITH THE CODE ABOVE\n",
+    "    \"HITs\": 2, # IF YOU CHANGE THIS TO A DICT YOU NEED TO INTEGRATE WITH THE CODE ABOVE\n",
     "}\n",
     "\n",
-    "external_submit = False # DO NOT CHANGE -- this means link to app, don't embed in AMT\n",
+    "external_submit = False # DO NOT CHANGE -- this means use iFrame\n",
     "if isinstance(hit_config['HITs'], int):\n",
     "    hit_config['HITs'] = [{} for i in range(hit_config['HITs'])]"
    ]
