Fix zoom vs zoomUse key issue

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sandbox or Production? You only spend money in Production.\n",
-    "USING_PROD = False\n",
+    "USING_PROD = True\n",
     "\n",
     "# Safety flags that prevent you from accidentally messing up your HITs. \n",
     "# Set to False except when you are performing these specific tasks.\n",
@@ -80,9 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USING PROD\n"
+     ]
+    }
+   ],
    "source": [
     "if USING_PROD:\n",
     "    print(\"USING PROD\")\n",
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>This task must be completed on a <strong>mobile device</strong>. In this task, you will be presented with a photo gallery of <strong>15 Graphic Designer Résumés</strong>. Please inspect each résumé carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. Please spend at least <strong>5-10 seconds</strong> per résumé looking around and zooming. Please swipe right after viewing each résumé to move to the next one. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about <strong>4-6 minutes</strong> and must be completed in one sitting. At the end of the task you will be asked:</p><ul><li><strong>Which candidate would you hire and why?</strong></li></ul>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Use this cell to generate and preview the HIT description\n",
     "\n",
@@ -236,25 +257,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use this cell to configure your HIT\n",
     "hit_config = {\n",
+    "    # you probably want to change these\n",
+    "    \"numAssignments\": 5, # per HIT\n",
+    "    \"rewardAmount\": \"1.00\",\n",
+    "    \"lifetime\": 1 * 60 * 60, # in seconds\n",
+    "    # one HIT gets created per dictionary\n",
+    "    # you can add items to the dict to override the values above\n",
+    "    # alternatively, provide a number to create that many HITs with the default settings\n",
+    "    \"HITs\": 1, # IF YOU CHANGE THIS TO A DICT YOU NEED TO INTEGRATE WITH THE CODE ABOVE\n",
+    "    # you probably do not want to change these\n",
     "    \"title\": \"Zoom Maps: \" + big_name,\n",
     "    \"description\": \"Pinch and Zoom to look at \" + big_name,\n",
     "    \"instructions\": inst,\n",
     "    \"keywords\": [\"zoom\", \"pinch\", \"gesture\", \"mobile\", \"phone\", \"tablet\", \"image\", \"photo\", \"picture\"],\n",
-    "    \"numAssignments\": 1, # per HIT\n",
-    "    \"rewardAmount\": \"0.00\",\n",
     "    \"duration\": task_min_range[1] * 60 * 4, # in seconds\n",
-    "    \"lifetime\": 1 * 60 * 60, # in seconds\n",
-    "    \"taskUrl\": \"https://enigmatic-everglades-39931.herokuapp.com?dataset=\" + dataset,\n",
-    "    # one HIT gets created per dictionary\n",
-    "    # you can add items to the dict to override the values above\n",
-    "    # alternatively, provide a number to create that many HITs with the default settings\n",
-    "    \"HITs\": 2, # IF YOU CHANGE THIS TO A DICT YOU NEED TO INTEGRATE WITH THE CODE ABOVE\n",
+    "    \"taskUrl\": \"https://enigmatic-everglades-39931.herokuapp.com?dataset=\" + dataset\n",
     "}\n",
     "\n",
     "external_submit = False # DO NOT CHANGE -- this means use iFrame\n",
@@ -264,9 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating 1 HITs\n",
+      "{'HIT': {'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER', 'HITTypeId': '3K9PHCH9NOSYJ8UQRESBIZT7Q1GGDS', 'HITGroupId': '348YRR1X129MQDEUU8XZE2HQP2O0ZK', 'CreationTime': datetime.datetime(2019, 3, 31, 14, 39, 42, tzinfo=tzlocal()), 'Title': 'Zoom Maps: Natural Images', 'Description': 'Pinch and Zoom to look at Natural Images', 'Question': '<ExternalQuestion xmlns=\"http://mechanicalturk.amazonaws.com/AWSMechanicalTurkDataSchemas/2006-07-14/ExternalQuestion.xsd\">\\n<ExternalURL>https://enigmatic-everglades-39931.herokuapp.com?dataset=natural_test</ExternalURL>\\n  <FrameHeight>700</FrameHeight>\\n</ExternalQuestion>', 'Keywords': 'zoom,pinch,gesture,mobile,phone,tablet,image,photo,picture', 'HITStatus': 'Assignable', 'MaxAssignments': 20, 'Reward': '1.25', 'AutoApprovalDelayInSeconds': 604800, 'Expiration': datetime.datetime(2019, 3, 31, 15, 39, 42, tzinfo=tzlocal()), 'AssignmentDurationInSeconds': 1680, 'QualificationRequirements': [{'QualificationTypeId': '00000000000000000071', 'Comparator': 'EqualTo', 'LocaleValues': [{'Country': 'US'}], 'RequiredToPreview': False, 'ActionsGuarded': 'Accept'}, {'QualificationTypeId': '000000000000000000L0', 'Comparator': 'GreaterThanOrEqualTo', 'IntegerValues': [95], 'RequiredToPreview': False, 'ActionsGuarded': 'Accept'}], 'HITReviewStatus': 'NotReviewed', 'NumberOfAssignmentsPending': 0, 'NumberOfAssignmentsAvailable': 20, 'NumberOfAssignmentsCompleted': 0}, 'ResponseMetadata': {'RequestId': '2436cc06-04a3-4a7f-aa98-d75d44df55ef', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '2436cc06-04a3-4a7f-aa98-d75d44df55ef', 'content-type': 'application/x-amz-json-1.1', 'content-length': '1258', 'date': 'Sun, 31 Mar 2019 18:39:41 GMT'}, 'RetryAttempts': 0}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Use this cell to launch your HIT! \n",
     "hit_creation_function = create_hit_external if external_submit else create_hit_iframe\n",
@@ -294,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,22 +353,27 @@
     "# Prints out the HIT Title, id, if it is expired, and how many assignments it has\n",
     "# completed, pending, and left for work. \n",
     "def summarize_hits(hits): \n",
-    "    print(len(hits))\n",
     "    ret = \"\"\n",
     "    for hit in hits: \n",
     "        expiration = hit['Expiration'].replace(tzinfo=None)\n",
     "        is_expired = expiration < datetime.datetime.now()\n",
+    "        available = hit['NumberOfAssignmentsAvailable']\n",
+    "        pending = hit['NumberOfAssignmentsPending']\n",
+    "        approved = hit['NumberOfAssignmentsCompleted']\n",
+    "        completed = hit['MaxAssignments'] - available - pending - approved\n",
     "        description = (\"Title: {title}\\n\" \n",
     "        \"ID: {hid}\\n\"\n",
-    "        \"\\tAssignments left: {left}\\n\"\n",
-    "        \"\\tAssignments completed: {complete}\\n\"\n",
+    "        \"\\tAssignments available: {left}\\n\"\n",
     "        \"\\tAssignments pending: {pending}\\n\"\n",
+    "        \"\\tAssignments awaiting approval: {completed}\\n\"\n",
+    "        \"\\tAssignments completed (approved): {approved}\\n\"\n",
     "        \"\\tExpired: {exp}\\n\\n\").format(\n",
     "            title=hit['Title'], \n",
     "            hid=hit['HITId'], \n",
-    "            left=hit['NumberOfAssignmentsAvailable'], \n",
-    "            complete=hit['NumberOfAssignmentsCompleted'], \n",
-    "            pending=hit['NumberOfAssignmentsPending'],\n",
+    "            left=available, \n",
+    "            pending=pending,\n",
+    "            completed=completed,\n",
+    "            approved=approved,\n",
     "            exp=str(is_expired)\n",
     "        )\n",
     "        ret += description\n",
@@ -372,19 +409,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# refresh hits\n",
-    "hits = get_last_n_hits(10)"
+    "hits = get_last_n_hits(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Zoom Maps: Natural Images\n",
+      "ID: 3S1WOPCJFG2TCOQ81NJI1FAGWBCJER\n",
+      "\tAssignments available: 0\n",
+      "\tAssignments pending: 6\n",
+      "\tAssignments awaiting approval: 14\n",
+      "\tAssignments completed (approved): 0\n",
+      "\tExpired: False\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Summarizes all outstanding HITs\n",
     "summarize_hits(hits)"
@@ -392,9 +445,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HIT 3S1WOPCJFG2TCOQ81NJI1FAGWBCJER: Zoom Maps: Natural Images\n",
+      "\tAssignment 3X87C8JFV7LEVEXXNASXBGM3ZLLSQD\n",
+      "\t\tStatus: Submitted\n",
+      "\tAssignment 3IOEN3P9S8TLRCFJVIZF9AI39KX61B\n",
+      "\t\tStatus: Submitted\n",
+      "\tAssignment 320DUZ38G8WUJMKTXKE7P1REXFZGJQ\n",
+      "\t\tStatus: Submitted\n",
+      "\tAssignment 3EICBYG6456H2A4OVYIOZA6ZZN7JCJ\n",
+      "\t\tStatus: Submitted\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Summarizes assignments for all oustanding HITs \n",
     "summarize_assignments(hits)"
@@ -823,9 +893,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
