Mostly transitioned to new dataset json format

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -206,7 +206,7 @@
     {
      "data": {
       "text/html": [
-       "<p>This task must be completed on a <strong>mobile device</strong>. In this task, you will be presented with a photo gallery of <strong>15 Graphic Designer Résumés</strong>. Please inspect each résumé carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. Please spend at least <strong>5-10 seconds</strong> per résumé looking around and zooming. Please swipe right after viewing each résumé to move to the next one. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about <strong>4-6 minutes</strong> and must be completed in one sitting. At the end of the task you will be asked:</p><ul><li><strong>Which candidate would you hire and why?</strong></li></ul>"
+       "<p>This task must be completed on a <strong>mobile device</strong>. In this task, you will be presented with a gallery of <strong>15 Graphic Designer Résumés</strong>. Please inspect each résumé carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. Please spend at least <strong>5-10 seconds</strong> per résumé looking around and zooming. Please swipe right after viewing each résumé to move to the next one. You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. The entire task should take you about <strong>4-6 minutes</strong> and must be completed in one sitting. At the end of the task you will be asked:</p><ul><li><strong>Which candidate would you hire and why?</strong></li></ul>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -229,16 +229,16 @@
     "response = muterun_js('../utils/read-dataset.js', dataset)\n",
     "if response.exitcode == 0:\n",
     "    dsetinfo = json.loads(response.stdout)\n",
-    "    photo_sec_range = human_range(dsetinfo['minSecPhoto'], 5, 1.25)\n",
+    "    image_sec_range = human_range(dsetinfo['minSecImage'], 5, 1.25)\n",
     "    task_min_range = human_range(dsetinfo['minSecTotal'] / 60, 1, 1.5)\n",
     "else:\n",
     "    print(response.stderr)\n",
     "\n",
     "inst = \"<p>\"\n",
     "inst += \"This task must be completed on a <strong>mobile device</strong>. \"\n",
-    "inst += \"In this task, you will be presented with a photo gallery of <strong>%s %s</strong>. \" % (dsetinfo['numPhotos'], big_name)\n",
+    "inst += \"In this task, you will be presented with a gallery of <strong>%s %s</strong>. \" % (dsetinfo['numImages'], big_name)\n",
     "inst += \"Please inspect each %s carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details. \" % small_name\n",
-    "inst += \"Please spend at least <strong>%s-%s seconds</strong> per %s looking around and zooming. \" % (photo_sec_range + (small_name,))\n",
+    "inst += \"Please spend at least <strong>%s-%s seconds</strong> per %s looking around and zooming. \" % (image_sec_range + (small_name,))\n",
     "inst += \"Please swipe right after viewing each %s to move to the next one. \" % small_name\n",
     "inst += \"You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly. \"\n",
     "inst += \"The entire task should take you about <strong>%s-%s minutes</strong> and must be completed in one sitting. \" % (task_min_range)\n",
