Mostly updated the UI flow

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,17 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# refresh hits\n",
-    "hits = get_last_n_hits(1)"
+    "hits = get_last_n_hits(1, 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -429,10 +429,10 @@
       "Title: Zoom Maps: Graphic Designer Résumés\n",
       "ID: 3V7ICJJAZAP523V3OPUOU5FCBJXB4K\n",
       "\tAssignments available: 0\n",
-      "\tAssignments pending: 2\n",
-      "\tAssignments awaiting approval: 14\n",
+      "\tAssignments pending: 0\n",
+      "\tAssignments awaiting approval: 16\n",
       "\tAssignments completed (approved): 0\n",
-      "\tExpired: False\n",
+      "\tExpired: True\n",
       "\n",
       "\n"
      ]
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -529,11 +529,7 @@
       "Approving assignment\n",
       "Approving assignment\n",
       "Approving assignment\n",
-      "Approving assignment\n",
-      "Approving assignment\n",
-      "Approving assignment\n",
-      "Approving assignment\n",
-      "Approved 20 assignments\n"
+      "Approved 16 assignments\n"
      ]
     }
    ],
@@ -871,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,99 +909,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   {   'AssignmentId': '34Z02EIMITNRML5DVC386FR7O170TK',\n",
-      "        'HITId': '3AC6MFV69KRVWDME9AUAACVJ7QSZHL',\n",
-      "        'WorkerId': 'A2BPXWBO2OSJRP',\n",
-      "        'userId': '5ca121861b147d0017257f62'},\n",
-      "    {   'AssignmentId': '3X3OR7WPZ0ALLX2BH7EWD3N8DMX8LC',\n",
-      "        'HITId': '3AC6MFV69KRVWDME9AUAACVJ7QSZHL',\n",
-      "        'WorkerId': 'AESIFZEIVG1W5',\n",
-      "        'userId': '5ca121bd1b147d0017257f63'},\n",
-      "    {   'AssignmentId': '3X87C8JFV7LEVEXXNASXBGM3ZLLSQD',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A17D6BK59S31BM',\n",
-      "        'userId': '5ca1098a80a702001743aeb7'},\n",
-      "    {   'AssignmentId': '3IOEN3P9S8TLRCFJVIZF9AI39KX61B',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A289DF24X3Q8JZ',\n",
-      "        'userId': '5ca10a3080a702001743aebe'},\n",
-      "    {   'AssignmentId': '320DUZ38G8WUJMKTXKE7P1REXFZGJQ',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A2NGMLBFZ3YQP5',\n",
-      "        'userId': '5ca1098880a702001743aeb5'},\n",
-      "    {   'AssignmentId': '3EICBYG6456H2A4OVYIOZA6ZZN7JCJ',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A3JP7DIFRS0ZBY',\n",
-      "        'userId': '5ca10d7280a702001743af6e'},\n",
-      "    {   'AssignmentId': '3X87C8JFV7LEVEXXNASXBGM3ZLLQSB',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'AIK9IRPT4M848',\n",
-      "        'userId': '5ca10d2380a702001743af68'},\n",
-      "    {   'AssignmentId': '30MVJZJNHNNF4CXLJE8XXK5RT24J92',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A1G42P7S1ROOD2',\n",
-      "        'userId': '5ca10fe080a702001743afe2'},\n",
-      "    {   'AssignmentId': '38BQUHLA9XA8C77CO047A2SXSVMOMQ',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A2TY3D71ET67NT',\n",
-      "        'userId': '5ca10eab80a702001743af99'},\n",
-      "    {   'AssignmentId': '3RU7GD8VPP3TV2WINXD8BBWTUPZSPM',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
+      "[   {   'AssignmentId': '34J10VATJG8P10U1IYYJ7EGGQTIQIU',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A320QA9HJFUOZO',\n",
+      "        'userId': '5ca24ecc9a36280017a99475'},\n",
+      "    {   'AssignmentId': '3WS1NTTKEZMH3GNC0SYJPBC6XXT0FG',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A1SX8IVV82M0LW',\n",
+      "        'userId': '5ca2503d9a36280017a994a0'},\n",
+      "    {   'AssignmentId': '3V5Q80FXIY1TJEAXVK1V7QGOR5832U',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A3CH1Z6J9R38G9',\n",
+      "        'userId': '5ca24f689a36280017a99477'},\n",
+      "    {   'AssignmentId': '3OB0CAO74IZYE7A33QXSKOI3PPKYHC',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A1BSL1VC7PQR04',\n",
+      "        'userId': '5ca250769a36280017a994b3'},\n",
+      "    {   'AssignmentId': '3QILPRALQ65B9X5WTKUBQVRXIMR8NI',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A35565UGJN9V6Q',\n",
+      "        'userId': '5ca250c99a36280017a994d1'},\n",
+      "    {   'AssignmentId': '39L1G8WVWR1MUTS1CG1H276JZZU31D',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A36AB7LJRSNHQM',\n",
+      "        'userId': '5ca2506b9a36280017a994b1'},\n",
+      "    {   'AssignmentId': '3V0Z7YWSIZADVNCGFU71QL87IP12VQ',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A1PEUJ23G02GUZ',\n",
+      "        'userId': '5ca252b29a36280017a99562'},\n",
+      "    {   'AssignmentId': '31EUONYN2WDR2U1L2S5YXYBAJUWVOO',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'APEHS2JTA3FZJ',\n",
+      "        'userId': '5ca250bc9a36280017a994cd'},\n",
+      "    {   'AssignmentId': '3WJ1OXY92BQ4PEB7KGP64P7XJGU8A2',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
       "        'WorkerId': 'AHPCI0X85ZUR1',\n",
-      "        'userId': '5ca10ed180a702001743afa0'},\n",
-      "    {   'AssignmentId': '37M28K1J0RNT9V7QBKMXTFGBZKMJAH',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A2GA29WTMFW2W',\n",
-      "        'userId': '5ca110af80a702001743b01b'},\n",
-      "    {   'AssignmentId': '37TRT2X24R1YS5CIHYMTOQ0HH27JBC',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A3L8LSM7V7KX3T',\n",
-      "        'userId': '5ca1103880a702001743affd'},\n",
-      "    {   'AssignmentId': '37ZHEEHM6XW05F731WIQ3HXW2GW372',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'AHY3YAYJLTW32',\n",
-      "        'userId': '5ca1106080a702001743b009'},\n",
-      "    {   'AssignmentId': '3NJM2BJS4XGDOL7MQBN8W6SB8NFCPG',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'AVO9I5F22GK5Q',\n",
-      "        'userId': '5ca1114280a702001743b04f'},\n",
-      "    {   'AssignmentId': '3Q5ZZ9ZEVPP7J8ZQPKYPWERBRWT58H',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A2QBFXY9UQMJTT',\n",
-      "        'userId': '5ca1124480a702001743b0a5'},\n",
-      "    {   'AssignmentId': '3LO69W1SU4N0EC8T05QK5G46144GLS',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A114JRUBJ5IN7D',\n",
-      "        'userId': '5ca111dc80a702001743b077'},\n",
-      "    {   'AssignmentId': '31QNSG6A5S3M6CD9DDDMUY57I2O78Y',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A1LOUZD99NZCT2',\n",
-      "        'userId': '5ca1135f80a702001743b10f'},\n",
-      "    {   'AssignmentId': '3KMS4QQVK30JG6UG4L818VRFBQ1KFY',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'A2CF2BD4Q0ZDJN',\n",
-      "        'userId': '5ca113fc80a702001743b12b'},\n",
-      "    {   'AssignmentId': '3SKEMFQBZ4FA1RKTW72VY3ATOMOK8H',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'AEKJ0Q3OITMRJ',\n",
-      "        'userId': '5ca1140d80a702001743b12f'},\n",
-      "    {   'AssignmentId': '3AUQQEL7U636ZD92073N7XFSLML0VY',\n",
-      "        'HITId': '3S1WOPCJFG2TCOQ81NJI1FAGWBCJER',\n",
-      "        'WorkerId': 'ASW9MABLSXSPK',\n",
-      "        'userId': '5ca1174480a702001743b1a1'}]\n"
+      "        'userId': '5ca2548f9a36280017a995c9'},\n",
+      "    {   'AssignmentId': '3OHYZ19UGDF7A6YNRXE21BXXYLYOAL',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A2UXVNIR273792',\n",
+      "        'userId': '5ca254bd9a36280017a995d2'},\n",
+      "    {   'AssignmentId': '3HFNH7HEMIOB59O6SAYGM230BHYQGC',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'ANNVWKERLZG9A',\n",
+      "        'userId': '5ca257d19a36280017a99640'},\n",
+      "    {   'AssignmentId': '3S06PH7KSSEKCLUY557TFGSVQDQ1DI',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A2T11H7YI7QPGD',\n",
+      "        'userId': '5ca259bb9a36280017a99661'},\n",
+      "    {   'AssignmentId': '3ZGVPD4G6UROO6B3Z6G0CEUT6EOTZF',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A11UBOE8N877JJ',\n",
+      "        'userId': '5ca258609a36280017a99645'},\n",
+      "    {   'AssignmentId': '3ZDAD0O1T2NZJBBOYOSFFTEIYETXTP',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'AYEUCZ5YUJ73L',\n",
+      "        'userId': '5ca259119a36280017a9964f'},\n",
+      "    {   'AssignmentId': '32SVAV9L3GJIOH518ZUAD8ZM3UY3A1',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'AMSAIACF91GM3',\n",
+      "        'userId': '5ca279bc9a36280017a99739'},\n",
+      "    {   'AssignmentId': '3U5NZHP4LSC45TI2C3197XPRLLJPHD',\n",
+      "        'HITId': '3V7ICJJAZAP523V3OPUOU5FCBJXB4K',\n",
+      "        'WorkerId': 'A3DB8QTQS5J8MM',\n",
+      "        'userId': '5ca27dfc9a36280017a9974e'}]\n"
      ]
     }
    ],
    "source": [
     "# Use this cell to download data\n",
-    "SAVE_PATH = '../data/mturk-3.json'\n",
+    "SAVE_PATH = '../mturk-4.json'\n",
     "responses = get_assignment_content(hits, download_path=SAVE_PATH, should_print=True)"
    ]
   },
